...
            ) { item in
              UnitView(product: item)
            }
          }
        }
      }
      .searchable(text: $searchText, prompt: "Search here...")

    }
    .navigationTitle("Market")
    .navigationBarTitleDisplayMode(.inline)
  }
}

struct MarketView_Previews: PreviewProvider {
  static var previews: some View {
...
