...
          rating: Product.Rating(rate: 3.3, count: 203)),
        quantity: 4),
      ProductsInCart(
        id: UUID(),
        product: Product(
          id: 4,
          title: "Acer SB220Q bi 21.5 inches Full HD (1920 x 1080) IPS Ultra-Thin",
          price: 599, description: "-", category: .electronics,
          image: "https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg",
          rating: Product.Rating(rate: 2.9, count: 250)),
        quantity: 2),
      ProductsInCart(
        id: UUID(),
...
